--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "nintendo64-hal"
-version = "0.1.0"
+authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
+version = "0.0.0"
 edition = "2021"
+readme = "README.md"
+license = "GPL-v3.0"
+categories = ["development-tools"]
+keywords = ["hal", "nintendo64", "n64", "embedded"]
+description = "A peripheral access crate for the Nintendo 64."
+repository = "https://github.com/icorbrey/nintendo64-hal"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
