chore: Fix license string

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
 version = "0.0.0"
 edition = "2021"
 readme = "README.md"
-license = "GPL-v3.0"
+license = "GPL-3.0-only"
 categories = ["development-tools"]
 keywords = ["hal", "nintendo64", "n64", "embedded"]
 description = "A peripheral access crate for the Nintendo 64."
