chore: Fix description in toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 license = "GPL-3.0-only"
 categories = ["development-tools"]
 keywords = ["hal", "nintendo64", "n64", "embedded"]
-description = "A peripheral access crate for the Nintendo 64."
+description = "A hardware abstraction layer for the Nintendo 64."
 repository = "https://github.com/icorbrey/nintendo64-hal"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
